--- a/src/components/Store.css
+++ b/src/components/Store.css
@@ -208,9 +208,13 @@
         align-items: center;
     }
 
+    .filter-section{
+        justify-content: flex-start;
+    }
+
 }
 
-@media only screen and (max-width:840px)
+@media only screen and (max-width:700px)
 {
     .store-container{
         display: flex;
