--- a/src/components/TeamCard.css
+++ b/src/components/TeamCard.css
@@ -5,13 +5,23 @@
     justify-content: center;
     margin: 20px;
     border-radius: 5px;
-    box-shadow: 0px 0px 18px 0px rgba(0,0,0,0.58);
+    box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.58);
 }
 
 .member-image{
     width: 100%;
-    height: 200px;
+    height: 170px;
     width: 100%
+}
+
+.member-name{
+    margin:10px;
+    font-size: 20px;
+}
+
+.member-role{
+    margin:5px;
+    font-size: 15px;
 }
 
 .social-media{
